--- a/app/src/main/res/layout/profile_list_item.xml
+++ b/app/src/main/res/layout/profile_list_item.xml
@@ -6,7 +6,7 @@
     android:gravity="center_vertical" >
 
     <ImageView
-        android:id="@+id/img_cover"
+        android:id="@+id/profile_picture"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:layout_alignParentStart="true"
