--- a/app/src/main/res/layout/task_list_activity.xml
+++ b/app/src/main/res/layout/task_list_activity.xml
@@ -17,4 +17,14 @@
         app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:spanCount="2" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/add_task_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_margin="16dp"
+        android:layout_gravity="bottom|end"
+        android:src="@drawable/baseline_add_24"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
