--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    tools:context=".MainActivity"
+    android:id="@+id/main_view" >
 
-    <!-- RecyclerView dla listy profili -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/profileRecyclerView"
         android:layout_width="match_parent"
@@ -25,4 +26,15 @@
         android:layout_alignParentEnd="true"
         android:layout_margin="16dp"
         android:src="@drawable/baseline_add_24"/>
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/check_weather_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/checkWeather"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
+        android:layout_margin="16dp"
+        style="@style/Widget.MaterialComponents.Button.Icon"
+        android:textColor="@android:color/white"/>
 </RelativeLayout>
