--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,6 +16,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        android:clipToPadding="false"
         tools:listitem="@layout/profile_list_item" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
