--- a/app/src/main/res/layout/acticity_task_view.xml
+++ b/app/src/main/res/layout/acticity_task_view.xml
@@ -10,14 +10,16 @@
         android:id="@+id/titleEditText"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="text"/>
+        android:hint="@string/add_task_title_hint"
+        android:inputType="text" />
 
     <TextView
         android:id="@+id/dateTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/titleEditText"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="16dp"
+        android:textSize="18sp" />
 
     <EditText
         android:id="@+id/descriptionEditText"
@@ -25,8 +27,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/dateTextView"
         android:layout_marginTop="16dp"
+        android:hint="@string/add_task_desc_hint"
         android:inputType="textMultiLine"
-        android:minLines="3"/>
+        android:minLines="3" />
 
     <CheckBox
         android:id="@+id/isDoneCheckBox"
