--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -46,7 +46,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="64dp"
-        android:text="@string/edit_profile"
+        android:text="@string/stworz_nowy_profil"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/change_profile_image"
         app:layout_constraintTop_toBottomOf="@+id/profile_name" />
