--- a/app/src/main/res/layout/profile_list_item.xml
+++ b/app/src/main/res/layout/profile_list_item.xml
@@ -27,6 +27,7 @@
         android:gravity="start|center_vertical"
         android:maxLines="1"
         android:textSize="20sp"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/arrow_button"
         app:layout_constraintHorizontal_bias="1.0"
