--- a/app/src/main/res/layout/activity_new_profile.xml
+++ b/app/src/main/res/layout/activity_new_profile.xml
@@ -13,7 +13,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="64dp"
         android:ems="10"
-        android:hint="@string/nazwa_profilu"
+        android:hint="@string/profile_name"
         android:inputType="text"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -35,7 +35,7 @@
         android:layout_height="70dp"
         android:layout_marginStart="64dp"
         android:layout_marginTop="40dp"
-        android:text="@string/zmien_zdjecie"
+        android:text="@string/change_photo"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/profile_name" />
 
@@ -46,7 +46,7 @@
         android:layout_marginStart="20dp"
         android:layout_marginTop="40dp"
         android:layout_marginEnd="64dp"
-        android:text="@string/stworz_nowy_profil"
+        android:text="@string/new_profile"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/change_profile_image"
         app:layout_constraintTop_toBottomOf="@+id/profile_name" />
