--- a/app/src/main/res/layout/acticity_task_view.xml
+++ b/app/src/main/res/layout/acticity_task_view.xml
@@ -1,56 +1,92 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<ScrollView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp">
 
-    <EditText
-        android:id="@+id/titleEditText"
+    <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:hint="@string/add_task_title_hint"
-        android:inputType="text" />
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/dateTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/titleEditText"
-        android:layout_marginTop="16dp"
-        android:textSize="18sp" />
+        <TextView
+            android:id="@+id/titleLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/title_label"
+            android:textSize="18sp"
+            android:layout_marginBottom="4dp"
+            android:textStyle="bold" />
 
-    <EditText
-        android:id="@+id/descriptionEditText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/dateTextView"
-        android:layout_marginTop="16dp"
-        android:hint="@string/add_task_desc_hint"
-        android:inputType="textMultiLine"
-        android:minLines="3" />
+        <EditText
+            android:id="@+id/titleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/titleLabel"
+            android:hint="@string/add_task_title_hint"
+            android:inputType="text" />
 
-    <CheckBox
-        android:id="@+id/isDoneCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/descriptionEditText"
-        android:layout_marginTop="16dp"
-        android:text="@string/mark_task_as_done"/>
+        <TextView
+            android:id="@+id/dateLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/titleEditText"
+            android:layout_marginTop="16dp"
+            android:text="@string/date_label"
+            android:textSize="18sp"
+            android:textStyle="bold" />
 
-    <CheckBox
-        android:id="@+id/notifyCheckBox"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/isDoneCheckBox"
-        android:layout_marginTop="16dp"
-        android:text="@string/notify_me"/>
+        <TextView
+            android:id="@+id/dateTextView"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dateLabel"
+            android:layout_marginTop="4dp"
+            android:textSize="18sp" />
 
-    <Button
-        android:id="@+id/button_save"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/save_button"
-        android:layout_alignParentBottom="true"/>
-</RelativeLayout>
+        <TextView
+            android:id="@+id/descriptionLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/dateTextView"
+            android:layout_marginTop="16dp"
+            android:text="@string/description_label"
+            android:textSize="18sp"
+            android:textStyle="bold" />
+
+        <EditText
+            android:id="@+id/descriptionEditText"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/descriptionLabel"
+            android:layout_marginTop="4dp"
+            android:hint="@string/add_task_desc_hint"
+            android:inputType="textMultiLine"
+            android:minLines="3" />
+
+        <CheckBox
+            android:id="@+id/isDoneCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/descriptionEditText"
+            android:layout_marginTop="16dp"
+            android:text="@string/mark_task_as_done" />
+
+        <CheckBox
+            android:id="@+id/notifyCheckBox"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/isDoneCheckBox"
+            android:layout_marginTop="16dp"
+            android:text="@string/notify_me" />
+
+        <Button
+            android:id="@+id/button_save"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="@string/save_button"
+            android:layout_below="@id/notifyCheckBox"
+            android:layout_alignParentBottom="true"/>
+    </RelativeLayout>
+</ScrollView>
