--- a/app/src/main/res/layout/acticity_task_view.xml
+++ b/app/src/main/res/layout/acticity_task_view.xml
@@ -73,8 +73,8 @@
             android:layout_marginTop="16dp"
             android:text="@string/mark_task_as_done" />
 
-        <CheckBox
-            android:id="@+id/notifyCheckBox"
+        <Button
+            android:id="@+id/notifyButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/isDoneCheckBox"
@@ -86,7 +86,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/save_button"
-            android:layout_below="@id/notifyCheckBox"
+            android:layout_below="@id/notifyButton"
             android:layout_alignParentBottom="true"/>
     </RelativeLayout>
 </ScrollView>
