--- a/app/src/main/res/layout/acticity_task_view.xml
+++ b/app/src/main/res/layout/acticity_task_view.xml
@@ -4,7 +4,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="16dp">
+    android:padding="16dp"
+    android:id="@+id/task_view" >
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -16,7 +17,7 @@
             android:layout_height="wrap_content"
             android:text="@string/title_label"
             android:textSize="18sp"
-            android:layout_marginBottom="4dp"
+            android:layout_marginBottom="8dp"
             android:textStyle="bold" />
 
         <EditText
@@ -24,6 +25,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_below="@id/titleLabel"
+            android:layout_marginBottom="16dp"
             android:hint="@string/add_task_title_hint"
             android:inputType="text" />
 
@@ -43,6 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@id/dateLabel"
             android:layout_marginTop="4dp"
+            android:layout_marginBottom="16dp"
             android:textSize="18sp" />
 
         <TextView
@@ -63,7 +66,8 @@
             android:layout_marginTop="4dp"
             android:hint="@string/add_task_desc_hint"
             android:inputType="textMultiLine"
-            android:minLines="3" />
+            android:minLines="1"
+            android:layout_marginBottom="16dp" />
 
         <CheckBox
             android:id="@+id/isDoneCheckBox"
@@ -74,19 +78,12 @@
             android:text="@string/mark_task_as_done" />
 
         <Button
-            android:id="@+id/notifyButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/isDoneCheckBox"
-            android:layout_marginTop="16dp"
-            android:text="@string/notify_me" />
-
-        <Button
             android:id="@+id/button_save"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/save_button"
-            android:layout_below="@id/notifyButton"
-            android:layout_alignParentBottom="true"/>
+            android:layout_below="@id/isDoneCheckBox"
+            android:layout_alignParentBottom="true"
+            android:layout_marginTop="16dp"/>
     </RelativeLayout>
 </ScrollView>
