--- a/app/src/main/res/layout/acticity_task_view.xml
+++ b/app/src/main/res/layout/acticity_task_view.xml
@@ -15,9 +15,9 @@
             android:id="@+id/titleLabel"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:text="@string/title_label"
             android:textSize="18sp"
-            android:layout_marginBottom="8dp"
             android:textStyle="bold" />
 
         <EditText
@@ -28,6 +28,12 @@
             android:layout_marginBottom="16dp"
             android:hint="@string/add_task_title_hint"
             android:inputType="text" />
+
+        <View
+            android:layout_below="@+id/titleEditText"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/holo_purple"/>
 
         <TextView
             android:id="@+id/dateLabel"
@@ -47,6 +53,11 @@
             android:layout_marginTop="4dp"
             android:layout_marginBottom="16dp"
             android:textSize="18sp" />
+        <View
+            android:layout_below="@+id/dateTextView"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/holo_purple"/>
 
         <TextView
             android:id="@+id/descriptionLabel"
@@ -68,6 +79,12 @@
             android:inputType="textMultiLine"
             android:minLines="1"
             android:layout_marginBottom="16dp" />
+
+        <View
+            android:layout_below="@+id/descriptionEditText"
+            android:layout_width="match_parent"
+            android:layout_height="2dp"
+            android:background="@android:color/holo_purple"/>
 
         <CheckBox
             android:id="@+id/isDoneCheckBox"
