--- a/app/src/main/res/layout/delete_confirmation_dialog.xml
+++ b/app/src/main/res/layout/delete_confirmation_dialog.xml
@@ -1,39 +1,41 @@
 <!-- delete_confirmation_dialog.xml -->
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/rounded_corner"
     android:orientation="vertical"
-    android:padding="16dp">
+    android:padding="20dp">
+
 
     <TextView
         android:id="@+id/confirmation_message"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/confirmation_message"
-        android:textAppearance="?android:attr/textAppearanceMedium"/>
+        android:textAppearance="?android:attr/textAppearanceMedium" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="16dp">
+        android:layout_marginTop="16dp"
+        android:orientation="horizontal">
 
         <Button
             android:id="@+id/button_yes"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
             android:layout_weight="1"
-            android:text="@string/yes"
-            android:layout_marginEnd="8dp"/>
+            android:text="@string/yes" />
 
         <Button
             android:id="@+id/button_no"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="8dp"
             android:layout_weight="1"
-            android:text="@string/No"
-            android:layout_marginStart="8dp"/>
+            android:text="@string/No" />
     </LinearLayout>
 
 </LinearLayout>
